--- a/test/index.html
+++ b/test/index.html
@@ -2,7 +2,7 @@
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<title>example</title>
+		<title>Example</title>
 		<link rel="stylesheet" href="index.css">
 	</head>
 	<body>
